--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <ul>
             <li class="new-delhi">
-                <h2>new Delhi</h2>
+                <h2>New Delhi</h2>
                 <div>
                     <p>17°С</p>
                     <i class="icon-20"></i>
